# sling_runner

./: .gitignore  Towerfile  env.yaml  main.py  pyproject.toml  sling_easy.yaml  sling_run.py  sling_run_sub.py
.github/workflows/: run-sling.yml
dbt/dbt_after_el/: .user.yml  Towerfile  dbt_project.yml  dbt_run.py  profiles.yml  pyproject.toml
dbt/dbt_after_el/models/sums/: schema.yml  taxi_groupby.sql
job/: Towerfile  job.py  job_api.py  pyproject.toml
